<resources>
    <string name="app_name">AgileTrailblazers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_zip_code">Zip Code</string>
    <string name="submit">Submit</string>
    <string name="fahrenheit_scale_symbol">℉</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed_value">%1$s m&#47;s</string>
    <string name="pressure_value">%1$s hpa</string>
    <string name="measured">Measured: %1$s</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">%1$s%%</string>
    <string name="no_data_is_available">No data is available. Please try again.</string>
    <string name="weather">WEATHER</string>


    <string name="weather_api_key">abeb1ce41ac727eccc0287eaeb75bcc8</string>
    <string name="network_connection_error">You are not connected to Internet.</string>
    <string name="zipcode_error">Please enter valid zip code.</string>
</resources>
